feat: :sparkles: add scan with queue method

--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "aws-sdk": "^2.1664.0",
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.4.5",
+    "install": "^0.13.0",
     "mime": "^4.0.4",
     "node-fetch": "^3.3.2",
+    "npm": "^10.8.2",
     "puppeteer": "^22.13.1",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
