--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mime": "^4.0.4",
     "node-fetch": "^3.3.2",
     "npm": "^10.8.2",
+    "playwright": "^1.46.1",
     "user-agents": "^1.1.274"
   },
   "devDependencies": {
