--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "ryntab",
   "homepage": "",
   "license": "ISC",
+  "main": "index.js",
   "dependencies": {
     "aws-sdk": "^2.1664.0",
     "cheerio": "^1.0.0-rc.12",
