--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "aws-sdk": "^2.1664.0",
     "cheerio": "^1.0.0-rc.12",
+    "deepmerge": "^4.3.1",
     "dotenv": "^16.4.5",
     "install": "^0.13.0",
     "mime": "^4.0.4",
